-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Minor - P4
-
Affects Version/s: None
-
Component/s: None
-
None
-
Query Optimization
-
Fully Compatible
-
ALL
-
None
-
None
-
None
-
None
-
None
-
None
-
None
Currently the semantics of planRankerMode=histogramCE are such that the query fails if it contains a predicate on a field without a histogram. This is to prevent engineers from accidentally writing no-op tests (they intend to use histogram CE but don't).
However, if the server is startup with histogramCE, certain system queries will fail because we don't create histograms on any system collections. Identifying all possible system queries/fields to create histograms is not feasible, so we should avoiding using CBR for system queries when histogramCE is enabled. Note that samplingCE is ok to use in these cases because it doesn't require analyze.
Enterprise admin> use admin
Enterprise admin> db.createUser({user: 'ben', pwd: 'pass', roles: ['__system']})
Enterprise admin> db.auth("ben", "pass")
MongoServerError: no histogram found for path: user
- related to
-
SERVER-108342 Optimize system queries against system collections via CBR
-
- Needs Scheduling
-