SERVER-107736 Prevent histogramCE from running on system queries (#38708)

GitOrigin-RevId: 5962367319a58a9096fab0b97e529b4c334580ac