src/mongo/db/query/query_planner_params.h
@@ -273,6 +273,14 @@ struct QueryPlannerParams {
         if (!args.collections.hasMainCollection()) {
             return;
         }
+        // Prevent histogramCE on queries on internal collections. This is because currently
+        // histogramCE will cause queries to fail if the query contains a predicate on a field
+        // without a histogram. We don't create histograms on internal collections. To prevent such
+        // queries from failing, we use multiplanning in this case.
+        if (planRankerMode == QueryPlanRankerModeEnum::kHistogramCE &&
+            args.canonicalQuery.nss().dbName().isInternalDb()) {
+            planRankerMode = QueryPlanRankerModeEnum::kMultiPlanning;
+        }
         fillOutPlannerParamsForExpressQuery(
             args.opCtx, args.canonicalQuery, args.collections.getMainCollection());
         fillOutMainCollectionPlannerParams(
